[project]
name = "poros-core"
version = "0.0.1"
description = "Reusable core utilities for LLM-based agents"
authors = [{ name = "Jonathan Witztum", email = "jonathan@poroslabs.com" }]
license = { text = "MPL-2.0" }
dependencies = ["pydantic>=2.0"]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
